--- a/project-files/monica-python/monica-python.vcxproj
+++ b/project-files/monica-python/monica-python.vcxproj
@@ -197,7 +197,8 @@
     <ClCompile Include="..\..\src\io\csv-format.cpp" />
     <ClCompile Include="..\..\src\io\database-io.cpp" />
     <ClCompile Include="..\..\src\python\monica_py.cpp" />
-    <ClCompile Include="..\..\src\run\env-from-json.cpp" />
+    <ClCompile Include="..\..\src\run\env-from-json-config.cpp" />
+    <ClCompile Include="..\..\src\run\env-json-from-json-config.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\util\climate\climate-common.h" />
@@ -219,7 +220,8 @@
     <ClInclude Include="..\..\..\util\tools\read-ini.h" />
     <ClInclude Include="..\..\src\io\csv-format.h" />
     <ClInclude Include="..\..\src\io\database-io.h" />
-    <ClInclude Include="..\..\src\run\env-from-json.h" />
+    <ClInclude Include="..\..\src\run\env-from-json-config.h" />
+    <ClInclude Include="..\..\src\run\env-json-from-json-config.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
