--- a/project-files/monica-run/monica-run.vcxproj
+++ b/project-files/monica-run/monica-run.vcxproj
@@ -177,7 +177,8 @@
     <ClInclude Include="..\..\..\util\tools\read-ini.h" />
     <ClInclude Include="..\..\src\io\csv-format.h" />
     <ClInclude Include="..\..\src\io\database-io.h" />
-    <ClInclude Include="..\..\src\run\env-from-json.h" />
+    <ClInclude Include="..\..\src\run\env-from-json-config.h" />
+    <ClInclude Include="..\..\src\run\env-json-from-json-config.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\util\climate\climate-common.cpp" />
@@ -198,7 +199,8 @@
     <ClCompile Include="..\..\..\util\tools\read-ini.cpp" />
     <ClCompile Include="..\..\src\io\csv-format.cpp" />
     <ClCompile Include="..\..\src\io\database-io.cpp" />
-    <ClCompile Include="..\..\src\run\env-from-json.cpp" />
+    <ClCompile Include="..\..\src\run\env-from-json-config.cpp" />
+    <ClCompile Include="..\..\src\run\env-json-from-json-config.cpp" />
     <ClCompile Include="..\..\src\run\monica-run-main.cpp" />
   </ItemGroup>
   <ItemGroup>
