--- a/project-files/monica-zmq-server/monica-zmq-server.vcxproj
+++ b/project-files/monica-zmq-server/monica-zmq-server.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="..\..\..\util\tools\read-ini.h" />
     <ClInclude Include="..\..\..\util\tools\zmq-helper.h" />
     <ClInclude Include="..\..\src\run\run-monica-zmq.h" />
+    <ClInclude Include="..\..\src\run\serve-monica-zmq.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\util\climate\climate-common.cpp" />
@@ -194,6 +195,7 @@
     <ClCompile Include="..\..\..\util\tools\zmq-helper.cpp" />
     <ClCompile Include="..\..\src\run\monica-zmq-server-main.cpp" />
     <ClCompile Include="..\..\src\run\run-monica-zmq.cpp" />
+    <ClCompile Include="..\..\src\run\serve-monica-zmq.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\..\monica.rc" />
