--- a/project-files/monica-zmq-server/monica-zmq-server.vcxproj
+++ b/project-files/monica-zmq-server/monica-zmq-server.vcxproj
@@ -159,6 +159,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\util\climate\climate-common.h" />
+    <ClInclude Include="..\..\..\util\climate\climate-file-io.h" />
     <ClInclude Include="..\..\..\util\db\abstract-db-connections.h" />
     <ClInclude Include="..\..\..\util\db\db.h" />
     <ClInclude Include="..\..\..\util\db\sqlite3.h" />
@@ -174,11 +175,11 @@
     <ClInclude Include="..\..\..\util\tools\json11-helper.h" />
     <ClInclude Include="..\..\..\util\tools\read-ini.h" />
     <ClInclude Include="..\..\..\util\tools\zmq-helper.h" />
-    <ClInclude Include="..\..\src\run\run-monica-zmq.h" />
     <ClInclude Include="..\..\src\run\serve-monica-zmq.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\util\climate\climate-common.cpp" />
+    <ClCompile Include="..\..\..\util\climate\climate-file-io.cpp" />
     <ClCompile Include="..\..\..\util\db\abstract-db-connections.cpp" />
     <ClCompile Include="..\..\..\util\db\db.cpp" />
     <ClCompile Include="..\..\..\util\db\sqlite3.c" />
@@ -194,7 +195,6 @@
     <ClCompile Include="..\..\..\util\tools\read-ini.cpp" />
     <ClCompile Include="..\..\..\util\tools\zmq-helper.cpp" />
     <ClCompile Include="..\..\src\run\monica-zmq-server-main.cpp" />
-    <ClCompile Include="..\..\src\run\run-monica-zmq.cpp" />
     <ClCompile Include="..\..\src\run\serve-monica-zmq.cpp" />
   </ItemGroup>
   <ItemGroup>
